WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12389
Chinese decoding error at hk.antispam.yahoo.com
https://bugs.webkit.org/show_bug.cgi?id=12389
Summary
Chinese decoding error at hk.antispam.yahoo.com
Alexey Proskuryakov
Reported
2007-01-23 21:00:31 PST
The encoding is wrong at this site. Firefox works correctly. This bug was fixed for S60 in
bug 12371
.
Attachments
proposed fix
(4.96 KB, patch)
2007-01-26 12:23 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2007-01-23 21:57:58 PST
Will this also fix the Korean characters on this page (below the "To see the proper Korean characters..." text)?
http://www.masteryi.com/index.php?db=club_master&actKey=read&no=12
David Kilzer (:ddkilzer)
Comment 2
2007-01-23 22:20:57 PST
(In reply to
comment #1
)
> Will this also fix the Korean characters on this page (below the "To see the > proper Korean characters..." text)? > >
http://www.masteryi.com/index.php?db=club_master&actKey=read&no=12
The Korean characters don't appear correctly in Firefox, so I'm guessing not.
Alexey Proskuryakov
Comment 3
2007-01-26 12:23:13 PST
Created
attachment 12690
[details]
proposed fix This fix is different from what was committed to S60 branch (which just allowed IMG tags in head).
Darin Adler
Comment 4
2007-01-26 20:09:54 PST
Comment on
attachment 12690
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 5
2007-01-27 02:24:09 PST
Committed revision 19185.
Alexey Proskuryakov
Comment 6
2007-01-27 02:26:26 PST
(In reply to
comment #1
)
> Will this also fix the Korean characters on this page (below the "To see the > proper Korean characters..." text)? > >
http://www.masteryi.com/index.php?db=club_master&actKey=read&no=12
I don't think it's even a bug - the page doesn't have any indication of encoding (unless count the nonsensical CHARSET=en-us, which still has nothing to do with Korean).
David Kilzer (:ddkilzer)
Comment 7
2007-01-27 07:20:35 PST
(In reply to
comment #6
)
> (In reply to
comment #1
) > > Will this also fix the Korean characters on this page (below the "To see the > > proper Korean characters..." text)? > > > >
http://www.masteryi.com/index.php?db=club_master&actKey=read&no=12
> > I don't think it's even a bug - the page doesn't have any indication of > encoding (unless count the nonsensical CHARSET=en-us, which still has nothing > to do with Korean).
Yes, the individual characters need to be entity-encoded to work properly. Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug