        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12389
        Chinese decoding error at hk.antispam.yahoo.com

        Test: fast/encoding/noscript-in-head.html

        * loader/TextResourceDecoder.cpp:
        (WebCore::TextResourceDecoder::checkForHeadCharset): We were already allowing
        NOSCRIPT tags in head, let's actually skip over their content.



Canonical link: https://commits.webkit.org/16139@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19185 268f45cc-cd09-0410-ab3c-d52691b4dbfc