WebCore/loader/TextResourceDecoder.cpp
@@ -487,8 +487,7 @@ bool TextResourceDecoder::checkForHeadCharset(const char* data, size_t len, bool
     // <http://bugs.webkit.org/show_bug.cgi?id=4560> and
     // <http://bugs.webkit.org/show_bug.cgi?id=12165>.
     
-    bool withinTitle = false;
-    bool withinScript = false;
+    AtomicStringImpl* enclosingTagName;
 
     const char* ptr = m_buffer.data();
     const char* pEnd = ptr + m_buffer.size();
@@ -548,10 +547,17 @@ bool TextResourceDecoder::checkForHeadCharset(const char* data, size_t len, bool
             tmp[len] = 0;
             AtomicString tag(tmp);
             
-            if (tag == titleTag)
-                withinTitle = !end;
-            else if (tag == scriptTag)
-                withinScript = !end;
+            if (enclosingTagName) {
+                if (end && tag.impl() == enclosingTagName)
+                    enclosingTagName = 0;
+            } else {
+                if (tag == titleTag)
+                    enclosingTagName = titleTag.localName().impl();
+                else if (tag == scriptTag)
+                    enclosingTagName = scriptTag.localName().impl();
+                else if (tag == noscriptTag)
+                    enclosingTagName = noscriptTag.localName().impl();
+            }
             
             if (!end && tag == metaTag) {
                 const char* end = ptr;
@@ -597,7 +603,7 @@ bool TextResourceDecoder::checkForHeadCharset(const char* data, size_t len, bool
             } else if (tag != scriptTag && tag != noscriptTag && tag != styleTag &&
                        tag != linkTag && tag != metaTag && tag != objectTag &&
                        tag != titleTag && tag != baseTag && 
-                       (end || tag != htmlTag) && !withinTitle && !withinScript &&
+                       (end || tag != htmlTag) && !enclosingTagName &&
                        (tag != headTag) && isalpha(tmp[0])) {
                 m_checkedForHeadCharset = true;
                 return true;
